--- a/src/kroki.sass
+++ b/src/kroki.sass
@@ -59,12 +59,16 @@ svg.kroki-output
   &.kroki-output-nomnoml
     max-width: 40rem
 
-  &.kroki-output-vega
-    height: auto
-    max-width: 100%
   &.kroki-output-diverging-stacked-bar-char
     height: auto
     width: 40em
+
+  &.kroki-output-plantuml-mind-map,
+  &.kroki-output-plantuml-wbs,
+  &.kroki-output-packetdiag,
+  &.kroki-output-vega
+    height: auto
+    max-width: 100%
 
 // code
 
